# elevation-map

./: ProjectHome.md
resources/config_files/: Q_libelas.xml  parameters_libelas.xml
resources/images/: box2_disparity.pgm  box2_right.tif  box_left.tif  box_right.tif
src/generate_disparity_map_and_Q_matrix/: Makefile  generate_disparity_and_Q.cpp  generate_disparity_image.cpp
src/generate_elevation_map/: Makefile
src/reproject_image_to_point_cloud/: CMakeLists.txt  reproject_image_to_point_cloud.cpp
src/undistort_image/: undistort_image.cpp
trunk/resources/config_files/: Q_minoru.xml
trunk/resources/images/: box2_left.tif  cubes_left.tif  cubes_right.tif  libelas_disparity.pgm
trunk/src/compute_camera_rotation/: Makefile  compute_camera_rotation.cpp
trunk/src/generate_disparity_map_and_Q_matrix/: leeme.txt
trunk/src/generate_elevation_map/: Makefile  generate_elevation_map.cpp
trunk/src/reproject_image_to_point_cloud/: leeme.txt
trunk/src/undistort_image/: Makefile
